# Echo-Frame

./: .gitignore  README.md  TESTING_GUIDE.md  WEEK1_IMPLEMENTATION_SUMMARY.md  WEEK2_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  livekit.yaml  nginx-echoframe.conf
backend/echoframe_api/: alembic.ini  pyvenv.cfg  requirements.txt
backend/echoframe_api/alembic/: env.py
backend/echoframe_api/alembic/versions/: 61ceb573cf09_initial_migration_create_all_tables.py
backend/echoframe_api/app/: main.py
backend/echoframe_api/app/api/: deps.py
backend/echoframe_api/app/core/: config.py  database.py  livekit_service.py  redis_chat.py  redis_client.py  security.py  socketio_manager.py
backend/echoframe_api/app/db/: base.py  database.py
backend/echoframe_api/app/models/: __init__.py  admin.py  analytics.py  guest.py  subtitle.py  video.py
backend/echoframe_api/scripts/: create_admin.py
cli/: README.md  pyproject.toml
cli-tool/: requirements.txt
cli/echo_frame/: cli.py  config.py
cli/echo_frame/commands/: config_cmd.py  process.py  upload.py
cli/echo_frame/utils/: ffmpeg.py
cli/echo_frame_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/echo-frame-front/: package.json  pnpm-lock.yaml
frontend/echo-frame-front/app/: globals.css  layout.tsx  page.tsx
frontend/echo-frame-front/components/: animated-gradient.tsx  app-footer.tsx  app-navbar.tsx  border-beam-magic.tsx  theme-provider.tsx  theme-toggle.tsx  theme-transation.tsx
frontend/echo-frame-front/hooks/: use-theme.tsx
(+60 files in other folders)
